--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang=en><head><meta charset=utf-8><title>dodoish</title><link rel=icon href='data:;base64,iVBORw0KGgo='><style>
-
+#g{touch-action:manipulation}
 </style></head>
 <body><noscript>no js</noscript>
  <canvas id=g width=512 height=512></canvas>
